day43task-frontend

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+h2 {
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+#signin,
+#signup,
+#forgotpassword,
+#resetpassword {
+  display: inline-block;
+  border: 2px solid white;
+  border-radius: 0.35rem;
+  margin-top: 6rem;
+  padding: 2rem 2rem 1rem 2rem;
+  width: 320px;
+}
+
+.btn.btn-light {
+  color: white;
+  background-color: #00a2ff;
+  border: 1px solid white;
+}
+
+.link {
+  color: white;
+}
+
+.link:hover {
+  color: black;
+}
+
+#logoutbtn {
+  margin: 3% 47%;
+}
+
+@media (max-width: 480px) {
+  #logoutbtn {
+    margin: 3% 40%;
   }
 }
